k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingkaro
  namespace: shopingkaro
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shoppingkaro
  template:
    metadata:
      labels:
        app: shoppingkaro
    spec:
      containers:
        - name: shoppingkaro
          image: kaifshakeel/shopingkaro-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
