k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppingkaro-ingress
  namespace: shopingkaro
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: shoppingkaro.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shoppingkaro-service
            port:
              number: 80
